# minecraft-server-eu-bot

./: .gitignore  Pipfile  README.md  config.json  config.yaml  main.py  pyproject.toml  requirements.txt  urls.txt  usernames.txt  util.py  votebot.py
browser/extensions/: uBlock0@raymondhill.net.xpi  {e58d3966-3d76-4cd9-8552-1582fbc800c1}.xpi
