[tool.poetry]
name = "minecraft-server-eu-bot"
version = "0.1.0"
description = "Voting bot for minecraft-server.eu"
authors = ["Quoorex <46283604+Quoorex@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.23.0"
bs4 = "^0.0.1"
selenium = "^3.141.0"
python-anticaptcha = "^0.6.0"
webdrivermanager = "^0.8.0"
fake-useragent = "^0.1.11"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
